[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {vesrsion = "0.4.26", features = ["serde"]}
features = "0.10.0"
home = "0.5.5"
iced = {version = "0.10.0", features = []}
iced_aw = {version = "0.6.0", features = ["tab_bar", "tabs", "floating_element"]}
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = {version = "1.0.104"}
